docs: reconcile refactor backlog after TCP closure